--- a/styles.css
+++ b/styles.css
@@ -66,9 +66,20 @@ body {
     padding: 20px;
     border: solid black 1px;
     display: flex;
+    flex-direction: column;
+    font-size: 30px;
+}
+
+.topScreen {
+    flex: 1;
+    background-color: rgb(255, 245, 232);
+}
+
+.bottomScreen {
+    flex: 1;
+    display: flex;
     justify-content: end;
     align-items: center;
-    font-size: 30px;
 }
 
 .buttons {
